--- a/app/src/main/res/layout/activity_farmer_messages.xml
+++ b/app/src/main/res/layout/activity_farmer_messages.xml
@@ -51,6 +51,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:id = "@+id/messageAddContactButton"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
