--- a/app/src/main/res/layout/activity_farmer_request_pickup_set_pickup_location.xml
+++ b/app/src/main/res/layout/activity_farmer_request_pickup_set_pickup_location.xml
@@ -141,7 +141,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <RadioGroup
-        android:id="@+id/radioGroup3"
+        android:id="@+id/radioGroup"
         android:layout_width="301dp"
         android:layout_height="33dp"
         android:layout_marginBottom="84dp"
