--- a/app/src/main/res/layout/activity_farmer_edit_profile.xml
+++ b/app/src/main/res/layout/activity_farmer_edit_profile.xml
@@ -88,12 +88,13 @@ tools:context="com.example.wagner.avocado.FarmerEditProfile">
 
         <RatingBar
             android:id="@+id/ratingBar"
+            android:progressTint="@color/ratingStar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/profile_edit_short_bio"
+            android:layout_below="@+id/user_profile_name"
             android:layout_centerHorizontal="true"
             android:numStars="5"
-            android:rating="4.6"/>
+            android:rating="4.6" />
 
         <!-- @Arka change android:text="yo amo el aguacate" to the user's bio -->
 
@@ -113,17 +114,16 @@ tools:context="com.example.wagner.avocado.FarmerEditProfile">
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:background="@android:color/holo_green_light"
+            android:background="#fff"
             android:clickable="false"
             android:elevation="4dp"
             android:padding="20dp"
-
             android:text="Phone Number: " />
 
         <!-- @Arka change phone number -->
 
         <TextView
-            android:id="@+id/user_profile_phoneNumber2"
+            android:id="@+id/user_profile_address"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
@@ -181,7 +181,6 @@ tools:context="com.example.wagner.avocado.FarmerEditProfile">
             android:background="#fff"
             android:clickable="true"
             android:elevation="4dp"
-            android:hint="Phone Number"
             android:inputType="phone"
             android:padding="20dp"
             android:text="Phone Number: "
@@ -198,7 +197,6 @@ tools:context="com.example.wagner.avocado.FarmerEditProfile">
             android:background="#fff"
             android:clickable="false"
             android:elevation="4dp"
-            android:hint="Address"
             android:padding="20dp"
             android:text="Address: "
             android:hint="Address"/>
@@ -301,7 +299,6 @@ tools:context="com.example.wagner.avocado.FarmerEditProfile">
             android:text="Back"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
-
 
 
     </RelativeLayout>
