--- a/app/src/main/res/layout/activity_farmer_messages_listview.xml
+++ b/app/src/main/res/layout/activity_farmer_messages_listview.xml
@@ -2,14 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f2ffe6">
+    android:background="@android:color/transparent">
 
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="118dp"
         android:layout_marginBottom="5dp"
-        android:background="#ffffff"
+        android:background="@android:color/transparent"
         android:padding="15dp">
 
         <TextView
