Write message field added

--- a/app/src/main/res/layout/activity_farmer_my_messages_detail_view.xml
+++ b/app/src/main/res/layout/activity_farmer_my_messages_detail_view.xml
@@ -9,8 +9,9 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="475dp"
-        tools:layout_editor_absoluteY="67dp">
+        android:layout_height="274dp"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="55dp">
 
         <ListView
             android:id="@+id/messagesListView"
@@ -25,12 +26,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView17" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-        </LinearLayout>
     </ScrollView>
 
     <TextView
@@ -63,11 +58,23 @@
         android:layout_width="178dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="88dp"
-        android:layout_marginStart="8dp"
-        android:text="Write new message"
+        android:layout_marginEnd="8dp"
+        android:text="Send message"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="0dp"
+        android:layout_height="96dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginStart="32dp"
+        android:ems="10"
+        android:hint="Type your message here"
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toTopOf="@+id/button2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/farmerMyMessagesBackButton" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
